--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <version>3.20.2</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.instancio</groupId>
+            <artifactId>instancio-core</artifactId>
+            <version>2.16.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
